--- a/systack/templates/systack/upload.html
+++ b/systack/templates/systack/upload.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
-                  
+
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta http-equiv="Content-Language" content="zh-cn" />
-        <meta name="robots" content="all" />
-        <meta name="keywords" content="" />
-        <meta name="description" content="" />    
-        <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=yes">
-        <title>upload</title>
-    </head>
-                      
-    <body>
-        <form method="post" enctype="multipart/form-data">
-            {{ form.as_p }}
-            <input type="submit" value="submit"/>
-        </form>
-    </body>
+<head>
+    {% load url from future %}
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>UploadiFive Test</title>
+    <script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/jquery.uploadify.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}style/uploadify.css">
+    <style type="text/css">
+        body {
+            font: 13px Arial, Helvetica, Sans-serif;
+        }
+    </style>
+    <script type="text/javascript">
+        $(function() {
+            $('#file_upload').uploadify({
+                'debug'    			: true,
+                'swf'      : '{{ STATIC_URL }}swf/uploadify.swf',
+                'cancelImg' : '{{ STATIC_URL }}img/icons/uploadify-cancel.png',
+                'multi' : true,
+                'auto' : false,
+                'queueSizeLimit':20,
+                'uploader' : '{% url 'systack.views.upload_file' %}',
+                'removeCompleted':false,//
+                'sizeLimit':10240000,//设置上传文件大小单位kb
+                'fileExt':'*.jpg;*.gif;*.png',//设置上传文件类型为常用图片格式
+                'fileDesc':'Image Files'
+            });
+        });
+        function changeBtnText() {
+            $('#file_upload').uploadify('settings','formData',{'id':'测试','af':'ddd'});//settings可以设置上面各种参数也。
+        }
+        function uploadstart(){
+            //$('#file_upload').uploadify('settings','formData',{'title':33333,'file':333});	//设置表单数据
+            $('#file_upload').uploadify('upload');												//开始上传
+        }
+    </script>
+</head>
+
+<body>
+	<h3>一般上传</h3>
+<form method="post" enctype="multipart/form-data">{% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="submit"/>
+</form>
+<input id="file_upload" type="file" name="file_upload" />
+
+<a href="javascript:$('#file_upload').uploadify('upload')">Upload Files</a> | <a href="javascript:$('#file_upload').uploadify('cancel')">Cancel First File</a> | <a href="javascript:$('#file_upload').uploadify('cancel', '*')">Clear the Queue</a> | <a href="javascript:$('#file_upload').uploadify('upload', '*')">Upload the Files</a> | <a href="javascript:$('#file_upload').uploadify('disable', true)">Disable the Button</a> | <a href="javascript:$('#file_upload').uploadify('disable', false)">Enable the Button</a> | <a href="javascript:$('#file_upload').uploadify('stop')">Stop the Uploads!</a>
+
+<a href="javascript:uploadstart()">开始上传</a> | <a href="javascript:changeBtnText()">Change the Button Text</a>
+</body>
 </html>
