--- a/systack/templates/systack/common/sidebar.html
+++ b/systack/templates/systack/common/sidebar.html
@@ -15,7 +15,7 @@
           <li class="has_sub"><a href="#"><i class="icon-file-alt"></i> 游戏管理  <span class="pull-right"><i class="icon-chevron-right"></i></span></a>
             <ul>
               <li><a href="/hotupdate">游戏热更</a></li>
-              <li><a href="#">游戏装服</a></li>
+              <li><a href="/deploy">游戏装服</a></li>
               <li><a href="#">常用命令</a></li>
             </ul>
           </li>
