添加热更新文件后台功能，仍在开发ing

--- a/systack/templates/systack/error.html
+++ b/systack/templates/systack/error.html
@@ -13,10 +13,10 @@
   <meta name="author" content="">
 
   <!-- Stylesheets -->
-  <link href="style/bootstrap.css" rel="stylesheet">
-  <link rel="stylesheet" href="style/font-awesome.css">
-  <link href="style/style.css" rel="stylesheet">
-  <link href="style/bootstrap-responsive.css" rel="stylesheet">
+  <link href="{{ STATIC_URL }}style/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{ STATIC_URL }}style/font-awesome.css">
+  <link href="{{ STATIC_URL }}style/style.css" rel="stylesheet">
+  <link href="{{ STATIC_URL }}style/bootstrap-responsive.css" rel="stylesheet">
   
   <!-- HTML5 Support for IE -->
   <!--[if lt IE 9]>
@@ -24,7 +24,7 @@
   <![endif]-->
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="img/favicon/favicon.png">
+  <link rel="shortcut icon" href="{{ STATIC_URL }}img/favicon/favicon.png">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
                                  
                  <br />
                  <div class="horizontal-links">
-                  <a href="index-2.html">Home</a> | <a href="#">About Us</a> | <a href="#">Contact us</a> | <a href="#">FAQ</a>
+                  <a href="/">Home</a> | <a href="#">About Us</a> | <a href="#">Contact us</a> | <a href="#">FAQ</a>
                  </div>
 
                 </div>
