--- a/systack/templates/systack/common/sidebar.html
+++ b/systack/templates/systack/common/sidebar.html
@@ -17,7 +17,7 @@
               <li><a href="/deliver">文件分发</a></li>
               <li><a href="/hotupdate">文件热更</a></li>
               <li><a href="/deploy">游戏装服</a></li>
-              <li><a href="#">常用命令</a></li>
+              <li><a href="/operation">常用命令</a></li>
             </ul>
           </li>
           <li class="has_sub"><a href="#"><i class="icon-file-alt"></i> 后台管理  <span class="pull-right"><i class="icon-chevron-right"></i></span></a>
