完成权限控制及首页数据展示
完成权限控制及首页数据展示

--- a/systack/templates/systack/common/nav.html
+++ b/systack/templates/systack/common/nav.html
@@ -15,12 +15,12 @@
 
           <!-- Upload to server link. Class "dropdown-big" creates big dropdown -->
           <li class="dropdown dropdown-big">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="badge badge-important"><i class="icon-cloud-upload"></i></span> Upload to Cloud</a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="badge badge-important"><i class="icon-link"></i></span> 游戏管理后台</a>
             <!-- Dropdown -->
             <ul class="dropdown-menu">
               <li>
                 <!-- Progress bar -->
-                <p>Photo Upload in Progress</p>
+                <p></p>
                 <!-- Bootstrap progress bar -->
                 <div class="progress">
                   <div class="bar bar-success" style="width: 40%;"></div>
@@ -48,7 +48,7 @@
 
           <!-- Sync to server link -->
           <li class="dropdown dropdown-big">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="badge badge-success"><i class="icon-refresh"></i></span> Sync with Server</a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="badge badge-success"><i class="icon-link"></i></span> 中央后台</a>
             <!-- Dropdown -->
             <ul class="dropdown-menu">
               <li>
@@ -103,8 +103,8 @@
         <div class="span4">
           <!-- Logo. -->
           <div class="logo">
-            <h1><a href="#">Sy<span class="bold">MainTain</span></a></h1>
-            <p class="meta">something goes in meta area</p>
+            <h2><a href="/"><span class="bold">运维管理平台</span></a></h2>
+            <p class="meta">自动化--永远的追求</p>
           </div>
           <!-- Logo ends -->
         </div>
