--- a/systack/templates/systack/base.html
+++ b/systack/templates/systack/base.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <!-- Mirrored from responsivewebinc.com/premium/macadmin/ by HTTrack Website Copier/3.x [XR&CO'2013], Thu, 08 Aug 2013 06:53:43 GMT -->
@@ -99,37 +99,7 @@
 <script src="{{STATIC_URL}}js/charts.js"></script> <!-- Custom codes -->
 <script src="{{STATIC_URL}}js/jquery.uploadify.js"></script>
 <script src="{{STATIC_URL}}js/jquery.uploadify.min.js"></script>
-<script type="text/javascript">
-    $(".form_datetime").datetimepicker({
-        format: "yyyy-mm-dd hh:ii:ss",
-        autoclose: true,
-        todayBtn: true,
-        pickSeconds: true,
-        startDate: "2013-09-24 10:00:00",
-        minuteStep: 10
-    });
-</script>
-<script type="text/javascript">
-    $(function() {
-        $('#file_upload').uploadify({
-            'swf'      : '{{STATIC_URL}}swf/uploadify.swf',
-            'cancelImg' : '{{STATIC_URL}}img/icons/uploadify-cancel.png',
-            'multi' : true,
-            'auto' : false,
-            'queueSizeLimit':20,
-            'uploader' : '{% url 'systack.views.upload_file' %}',
-            'removeCompleted':false,//
-            'sizeLimit':20480000,//设置上传文件大小单位kb
-            'fileExt':'*.config;*.beam;*.png;*.jpg',//设置上传文件类型为常用图片格式
-            'fileDesc':'Image Files;Config Files'
-        });
-    });
-    function uploadstart(){
-        $('#file_upload').uploadify('upload');												//开始上传
-    }
-</script>
 {% block js %}
-
 {% endblock %}
 </body>
 </html>
