--- a/systack/templates/systack/common/sidebar.html
+++ b/systack/templates/systack/common/sidebar.html
@@ -5,13 +5,14 @@
       	<!-- If the main navigation has sub navigation, then add the class "has_sub" to "li" of main navigation. -->
       	<ul id="nav">
         	<!-- Main menu with font awesome icon -->
-	        <li><a href="#" class="open"><i class="icon-home"></i> Dashboard</a>
+	        <li><a href="/" class="open"><i class="icon-home"></i> 仪表板</a>
 	        </li>
           <li class="has_sub"><a href="/schedule"><i class="icon-list-alt"></i> 项目概况  <span class="pull-right"><i class="icon-chevron-right"></i></span></a>
             <ul>
               <li><a href="/schedule">开服计划</a></li>
             </ul>
-          </li>  
+          </li>
+           {% if request.user.is_staff %}
           <li class="has_sub"><a href="#"><i class="icon-file-alt"></i> 游戏管理  <span class="pull-right"><i class="icon-chevron-right"></i></span></a>
             <ul>
               <li><a href="/deliver">文件分发</a></li>
@@ -22,9 +23,9 @@
           </li>
           <li class="has_sub"><a href="#"><i class="icon-file-alt"></i> 后台管理  <span class="pull-right"><i class="icon-chevron-right"></i></span></a>
             <ul>
-              <li><a href="#">用户管理</a></li>
-              <li><a href="#">用户组管理</a></li>
+              <li><a href="/user_manager">用户管理</a></li>
+{#              <li><a href="#">用户组管理</a></li>#}
             </ul>
-          <li><a href="#"><i class="icon-table"></i> 预留</a></li>
+           {% endif %}
       	</ul>
   	</div>
