--- a/systack/templates/systack/modal.html
+++ b/systack/templates/systack/modal.html
@@ -1,4 +1,4 @@
-<table class="table table-striped table-bordered table-hover" >
+<table id="ret_table" class="table table-striped table-bordered table-hover" >
     <thead>
     <tr>
         <th>区服</th>
@@ -20,3 +20,12 @@
     {% endfor %}
     </tbody>
 </table>
+{% if ret_list %}
+<div class="error-log">
+<ul>
+    {% for log in ret_list %}
+        <li>{{ log }}</li>
+    {% endfor %}
+</ul>
+</div>
+{% endif %}
