日志展示调整，增加常用命令功能
后端日志库已调整到db=1，所以前端进行较多的调整。同时在常用命令模块中添加了对main节点的操作功能。文件热更功能模块也做了细节调整。

--- a/systack/static/style/style.css
+++ b/systack/static/style/style.css
@@ -440,7 +440,7 @@ text-decoration:none;
 }
 
 .dropdown-menu li > a:hover{
-	background: #f3f3f3 !important;
+	background: #65b8e1 !important;
 	filter:none;
 	color: #888;
 }
