--- a/systack/templates/systack/common/nav.html
+++ b/systack/templates/systack/common/nav.html
@@ -15,65 +15,14 @@
 
           <!-- Upload to server link. Class "dropdown-big" creates big dropdown -->
           <li class="dropdown dropdown-big">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="badge badge-important"><i class="icon-link"></i></span> 游戏管理后台</a>
-            <!-- Dropdown -->
-            <ul class="dropdown-menu">
-              <li>
-                <!-- Progress bar -->
-                <p></p>
-                <!-- Bootstrap progress bar -->
-                <div class="progress">
-                  <div class="bar bar-success" style="width: 40%;"></div>
-                </div>
-
-                <hr />
-
-                <!-- Progress bar -->
-                <p>Video Upload in Progress</p>
-                <!-- Bootstrap progress bar -->
-                <div class="progress">
-                  <div class="bar bar-important" style="width: 80%;"></div>
-                </div>   
-
-                <hr />             
-
-                <!-- Dropdown menu footer -->
-                <div class="drop-foot">
-                  <a href="#">View All</a>
-                </div>
-
-              </li>
-            </ul>
-          </li>
+            <a href="http://s3.app1101102099.qqopenapp.com/admin/login.php" target="_blank"><span class="badge badge-important"><i class="icon-link"></i></span> 游戏管理后台</a>
 
           <!-- Sync to server link -->
           <li class="dropdown dropdown-big">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="badge badge-success"><i class="icon-link"></i></span> 中央后台</a>
-            <!-- Dropdown -->
-            <ul class="dropdown-menu">
-              <li>
-                <!-- Using "icon-spin" class to rotate icon. -->
-                <p><span class="badge badge-success"><i class="icon-refresh icon-spin"></i></span> Syncing Members Lists to Server</p>
-                <hr />
-                <p><span class="badge badge-warning"><i class="icon-refresh icon-spin"></i></span> Syncing Bookmarks Lists to Cloud</p>
-
-                <hr />
-
-                <!-- Dropdown menu footer -->
-                <div class="drop-foot">
-                  <a href="#">View All</a>
-                </div>
-
-              </li>
-            </ul>
-          </li>
+            <a href="http://central.app1101102099.twsapp.com/module/index.php" target="_blank"><span class="badge badge-success"><i class="icon-link"></i></span> 中央后台</a>
 
         </ul>
 
-        <!-- Search form -->
-        <form class="navbar-search pull-left">
-          <input type="text" class="search-query" placeholder="Search">
-        </form>
 
         <!-- Links -->
         <ul class="nav pull-right">
@@ -104,7 +53,7 @@
           <!-- Logo. -->
           <div class="logo">
             <h2><a href="/"><span class="bold">运维管理平台</span></a></h2>
-            <p class="meta">自动化--永远的追求</p>
+            <p class="meta">自动一体化，释放你的左右手！</p>
           </div>
           <!-- Logo ends -->
         </div>
