--- a/systack/templates/systack/register.html
+++ b/systack/templates/systack/register.html
@@ -17,28 +17,28 @@
                                     <!-- Registration form starts -->
                                     <!-- Username -->
                                     <div class="control-group">
-                                        <label class="control-label" for="username">用户名：</label>
+                                        <label class="control-label col-lg-3" for="username">用户名：</label>
                                         <div class="controls">
                                             <input type="text" class="input-large" id="username">
                                         </div>
                                     </div>
                                     <!-- Email -->
                                     <div class="control-group">
-                                        <label class="control-label" for="email">电子邮箱：</label>
+                                        <label class="control-label col-lg-3" for="email">电子邮箱：</label>
                                         <div class="controls">
                                             <input type="text" class="input-large" id="email">
                                         </div>
                                     </div>
                                     <!-- Password -->
                                     <div class="control-group">
-                                        <label class="control-label" for="email">密码：</label>
+                                        <label class="control-label col-lg-3" for="email">密码：</label>
                                         <div class="controls">
                                             <input type="password" class="input-large" id="password">
                                         </div>
                                     </div>
                                     <!-- Password -->
                                     <div class="control-group">
-                                        <label class="control-label" for="email">重复密码：</label>
+                                        <label class="control-label col-lg-3" for="email">重复密码：</label>
                                         <div class="controls">
                                             <input type="password" class="input-large" id="password">
                                         </div>
