--- a/systack/templates/systack/test.html
+++ b/systack/templates/systack/test.html
@@ -78,11 +78,11 @@
                     <div class="modal-body">
                         <ul class="nav nav-list">
                             <li class="nav-header">Name</li>
-                            <li><input class="input-xlarge" value=" krizna" type="text" name="name"></li>
+                            <li><input class="form-control" value=" krizna" type="text" name="name"></li>
                             <li class="nav-header">Email</li>
-                            <li><input class="input-xlarge" value=" user@krizna.com" type="text" name="Email"></li>
+                            <li><input class="form-control" value=" user@krizna.com" type="text" name="Email"></li>
                             <li class="nav-header">Message</li>
-                            <li><textarea class="input-xlarge" name="sug" rows="3"> Thanks for the article and demo
+                            <li><textarea class="form-control" name="sug" rows="3"> Thanks for the article and demo
                             </textarea></li>
                         </ul>
                     </div>
