--- a/systack/templates/404.html
+++ b/systack/templates/404.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from responsivewebinc.com/premium/macadmin/error.html by HTTrack Website Copier/3.x [XR&CO'2013], Thu, 08 Aug 2013 06:55:21 GMT -->
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <!-- Title and other stuffs -->
-  <title>Error</title>
+  <title>Error - 运维管理平台</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="author" content="">
 
   <!-- Stylesheets -->
-  <link href="{{ STATIC_URL }}style/bootstrap.css" rel="stylesheet">
-  <link rel="stylesheet" href="{{ STATIC_URL }}style/font-awesome.css">
-  <link href="{{ STATIC_URL }}style/style.css" rel="stylesheet">
-  <link href="{{ STATIC_URL }}style/bootstrap-responsive.css" rel="stylesheet">
+  <link href="{{STATIC_URL}}style/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{STATIC_URL}}style/font-awesome.css">
+  <link href="{{STATIC_URL}}style/style.css" rel="stylesheet">
+  <link href="http://responsivewebinc.com/premium/macadmin/style/bootstrap-responsive.css" rel="stylesheet">
   
   <!-- HTML5 Support for IE -->
   <!--[if lt IE 9]>
@@ -24,17 +22,17 @@
   <![endif]-->
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="{{ STATIC_URL }}img/favicon/favicon.png">
+  <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon/favicon.png">
 </head>
 
 <body>
 
 <!-- Form area -->
 <div class="error-page">
-  <div class="container-fluid">
+  <div class="container">
 
-    <div class="row-fluid">
-      <div class="span12">
+    <div class="row">
+      <div class="col-md-12">
         <!-- Widget starts -->
             <div class="widget">
               <!-- Widget head -->
@@ -49,14 +47,16 @@
                   <p>Aliquam consequat, purus vitae auctor ullamcorper, sem velit convallis quam, a pharetra justo nunc et mauris. </p>
                   <br />
 
-                                 <form method="get" id="searchform" action="#" class="form-search">
-                                    <input type="text" value="" name="s" id="s" class="input-medium"/>
-                                    <button type="submit" class="btn">Search</button>
+                                 <form class="form-inline">
+									<div class="form-group">
+										<input type="text" value="" name="s" id="s" class="form-control"/>
+									</div>
+                                    <button type="submit" class="btn btn-default">Search</button>
                                  </form>
                                  
                  <br />
                  <div class="horizontal-links">
-                  <a href="/">Home</a> | <a href="#">About Us</a> | <a href="#">Contact us</a> | <a href="#">FAQ</a>
+                  <a href="/">Home</a> | <a href="error.html#">About Us</a> | <a href="error.html#">Contact us</a> | <a href="error.html#">FAQ</a>
                  </div>
 
                 </div>
@@ -73,9 +73,7 @@
 		
 
 <!-- JS -->
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.js"></script>
+<script src="{{STATIC_URL}}js/jquery.js"></script>
+<script src="{{STATIC_URL}}js/bootstrap.js"></script>
 </body>
-
-<!-- Mirrored from responsivewebinc.com/premium/macadmin/error.html by HTTrack Website Copier/3.x [XR&CO'2013], Thu, 08 Aug 2013 06:55:21 GMT -->
 </html>
