--- a/systack/templates/systack/base.html
+++ b/systack/templates/systack/base.html
@@ -32,7 +32,7 @@
     <!-- Uniform -->
     <link rel="stylesheet" href="{{STATIC_URL}}style/uniform.default.css">
     <!-- Bootstrap toggle -->
-    <link rel="stylesheet" href="{{STATIC_URL}}style/bootstrap-toggle-buttons.css">
+    <link rel="stylesheet" href="{{STATIC_URL}}style/bootstrap-switch.css">
     <!-- less -->
     <link rel="stylesheet/less" href="{{STATIC_URL}}less/datetimepicker.less">
     <!-- uploadify css -->
@@ -95,13 +95,15 @@
 <script src="{{STATIC_URL}}js/sparklines.js"></script> <!-- Sparklines -->
 <script src="{{STATIC_URL}}js/jquery.cleditor.min.js"></script> <!-- CLEditor -->
 <script src="{{STATIC_URL}}js/bootstrap-datetimepicker.min.js"></script> <!-- Date picker -->
-<script src="{{STATIC_URL}}js/jquery.uniform.min.js"></script> <!-- jQuery Uniform -->
-<script src="{{STATIC_URL}}js/jquery.toggle.buttons.js"></script> <!-- Bootstrap Toggle -->
+<script src="{{STATIC_URL}}js/bootstrap-switch.min.js"></script> <!-- Date picker -->
+{#<script src="{{STATIC_URL}}js/jquery.uniform.min.js"></script> <!-- jQuery Uniform -->#}
+{#<script src="{{STATIC_URL}}js/jquery.toggle.buttons.js"></script> <!-- Bootstrap Toggle -->#}
 <script src="{{STATIC_URL}}js/filter.js"></script> <!-- Filter for support page -->
 <script src="{{STATIC_URL}}js/custom.js"></script> <!-- Custom codes -->
 <script src="{{STATIC_URL}}js/charts.js"></script> <!-- Custom codes -->
 <script src="{{STATIC_URL}}js/jquery.uploadify.js"></script>
 <script src="{{STATIC_URL}}js/jquery.uploadify.min.js"></script>
+<script src="{{STATIC_URL}}js/locales/bootstrap-datetimepicker.zh-CN.js" charset="utf-8"></script> <!-- Date picker -->
 {% block js %}
 {% endblock %}
 </body>
