新增常用命令
新增加了游戏常用命令，修改了拉取日志的方法，通过实现JS实现间断无闪烁刷新，但同时也存在执行一个任务需要重新刷新页面的问题

--- a/systack/static/style/style.css
+++ b/systack/static/style/style.css
@@ -203,6 +203,7 @@ form label{
 	line-height: 15px;
 }
 
+
 .form-inline button{
 	margin-left: 15px;
 }
@@ -212,7 +213,7 @@ font-size:12px;
 }
 
 .form-horizontal .control-label {
-width: 90px;
+width: 110px;
 }
 
 .form-horizontal .controls {
@@ -451,7 +452,7 @@ text-decoration:none;
 }
 
 .dropdown-menu li > a:hover{
-	background: #f3f3f3 !important;
+	background: #46b8da !important;
 	filter:none;
 	color: #777;
 }
