--- a/systack/templates/systack/base.html
+++ b/systack/templates/systack/base.html
@@ -3,6 +3,7 @@
 
 <!-- Mirrored from responsivewebinc.com/premium/macadmin/ by HTTrack Website Copier/3.x [XR&CO'2013], Thu, 08 Aug 2013 06:53:43 GMT -->
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <!-- Title and other stuffs -->
@@ -26,7 +27,7 @@
     <link rel="stylesheet" href="{{STATIC_URL}}style/rateit.css">
     <!-- Date picker -->
     <link rel="stylesheet" href="{{STATIC_URL}}style/bootstrap-datetimepicker.min.css">
-    <link rel="stylesheet" href="{{STATIC_URL}}style/datetimepicker.css">
+{#    <link rel="stylesheet" href="{{STATIC_URL}}style/datetimepicker.css">#}
     <!-- CLEditor -->
     <link rel="stylesheet" href="{{STATIC_URL}}style/jquery.cleditor.css">
     <!-- Uniform -->
