--- a/systack/templates/systack/common/nav.html
+++ b/systack/templates/systack/common/nav.html
@@ -35,7 +35,7 @@
                     <!-- Dropdown menu -->
                     <ul class="dropdown-menu">
                         <li><a href="#"><i class="icon-user"></i> Profile</a></li>
-                        <li><a href="#"><i class="icon-cogs"></i> Settings</a></li>
+                        <li><a href="/admin"><i class="icon-cogs"></i> Settings</a></li>
                         <li><a href="logout"><i class="icon-off"></i> Logout</a></li>
                     </ul>
                 </li>
