--- a/systack/templates/systack/register.html
+++ b/systack/templates/systack/register.html
@@ -2,9 +2,9 @@
 {% block title %}SY_MainTain{% endblock %}
 {% block mainbar %}
     <div class="admin-form">
-        <div class="container-fluid">
-            <div class="row-fluid">
-                <div class="span12">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
                     <!-- Widget starts -->
                     <div class="widget">
                         <div class="widget-head">
