--- a/systack/templates/systack/modal.html
+++ b/systack/templates/systack/modal.html
@@ -1,29 +1,31 @@
-<table id="ret_table" class="table table-striped table-bordered table-hover" >
-    <thead>
-    <tr>
-        <th id="role">角色</th>
-        <th id="main">服务器</th>
-        <th id="node">区服</th>
-        <th id="file">文件名</th>
-        <th id="result">结果</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for role, main_id, node_id, value , result in list %}
+<div class="table-responsive">
+    <table id="ret_table" class="table table-striped table-bordered table-hover" >
+        <thead>
         <tr>
-            <td id="role_id">{{ role }}</td>
-            <td id="main_id">{{ main_id }}</td>
-            <td id="node_id">{{ node_id }}</td>
-            <td id="value">{{ value }}</td>
-            {% if result %}
-                <td><span class="label label-success">成功</span></td>
-            {% else %}
-                <td><span class="label label-warning">失败</span></td>
-            {% endif %}
+            <th id="role">角色</th>
+            <th id="main">服务器</th>
+            <th id="node">区服</th>
+            <th id="file">文件名</th>
+            <th id="result">结果</th>
         </tr>
-    {% endfor %}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        {% for role, main_id, node_id, value , result in list %}
+            <tr>
+                <td id="role_id">{{ role }}</td>
+                <td id="main_id">{{ main_id }}</td>
+                <td id="node_id">{{ node_id }}</td>
+                <td id="value">{{ value }}</td>
+                {% if result %}
+                    <td><span class="label label-success">成功</span></td>
+                {% else %}
+                    <td><span class="label label-warning">失败</span></td>
+                {% endif %}
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
 <div id="log" class="error-log">
     <ul>
         {% if ret_list %}
